// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorResponse 1`] = `
Object {
  "error": Object {
    "code": 0,
    "message": "",
  },
  "id": null,
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse 2`] = `
Object {
  "error": Object {
    "code": -0,
    "message": "",
  },
  "id": "",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse 3`] = `
Object {
  "error": Object {
    "code": -1,
    "message": "",
  },
  "id": "",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: invalid code 1`] = `
Object {
  "error": Object {
    "code": -124,
    "message": "message",
  },
  "id": "id2",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: invalid req 1`] = `
Object {
  "error": Object {
    "code": -32600,
    "message": "Invalid Request",
  },
  "id": "id",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: method not found 1`] = `
Object {
  "error": Object {
    "code": -32601,
    "message": "Method not found",
  },
  "id": "id",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: normal error 1`] = `
Object {
  "error": Object {
    "code": -123,
    "data": Object {
      "_data_": 1,
    },
    "message": "message",
  },
  "id": "id2",
  "jsonrpc": "2.0",
}
`;

exports[`ErrorResponse: parse error 1`] = `
Object {
  "error": Object {
    "code": -32700,
    "data": Object {
      "my_data": true,
    },
    "message": "Parse error",
  },
  "id": null,
  "jsonrpc": "2.0",
}
`;

exports[`Request: req1 1`] = `
Object {
  "id": "id",
  "jsonrpc": "2.0",
  "method": "method",
  "params": Array [
    "param1",
    "param2",
  ],
  "remoteStack": "stack",
}
`;

exports[`Request: req2 1`] = `
Object {
  "id": "id2",
  "jsonrpc": "2.0",
  "method": "method",
  "params": Object {
    "param1": "abc",
    "param2": "def",
  },
  "remoteStack": "stack",
}
`;

exports[`SuccessResponse: success 1`] = `
Object {
  "id": "id3",
  "jsonrpc": "2.0",
  "result": Object {
    "data": "result",
  },
}
`;

exports[`SuccessResponse: undefined 1`] = `
Object {
  "id": "id2",
  "jsonrpc": "2.0",
  "result": undefined,
}
`;
